[package]
name = "serenedb-drivers-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres = "0.19"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "any"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"

[[test]]
name = "tokio_postgres"
path = "tests/tokio_postgres.rs"

[[test]]
name = "sqlx"
path = "tests/sqlx.rs"

[[test]]
name = "postgres"
path = "tests/postgres.rs"
